cfn/vpc1/vpc-vpc-v01.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description":"vpc-vpc-v01.json",

  "Parameters": {
    "PrivateAvailZone": {
      "Description": "Private Availability Zone",
      "MinLength": "9",
      "Type": "String"
    },

    "PublicAvailZone": {
      "Description": "Public Availability Zone",
      "MinLength": "9",
      "Type": "String"
    }
  },

  "Mappings":{
    "SubnetConfig":{
      "VPC":{"CIDR":"192.168.0.0/16"},
      "Private":{"CIDR":"192.168.2.0/24"},
      "Public":{"CIDR":"192.168.1.0/24"}
    }
  },

  "Resources": {
    "VPC":{
      "Type":"AWS::EC2::VPC",
      "Properties":{
        "CidrBlock":{"Fn::FindInMap":["SubnetConfig", "VPC", "CIDR"]},
        "EnableDnsSupport":"true",
        "EnableDnsHostnames":"false",
        "InstanceTenancy":"default",
        "Tags":[
          {"Key":"Application", "Value":{"Ref":"AWS::StackName"}}
        ]
      }
    },

    "InternetGateway":{
      "Type":"AWS::EC2::InternetGateway",
      "Properties":{
        "Tags":[
          {"Key":"Application", "Value":{"Ref":"AWS::StackName"}},
          {"Key":"Network", "Value":"Public"}
        ]
      }
    },

    "GatewayAttach":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "InternetGatewayId":{"Ref":"InternetGateway"}
      }
    },

    "GatewayIp": {
      "Type":"AWS::EC2::EIP",
      "Properties":{
        "Domain":{"Ref":"VPC"}
      }
    },

    "NatGateway": {
      "Type":"AWS::EC2::NatGateway",
      "DependsOn": "GatewayAttach",
      "Properties":{
        "AllocationId":{"Fn::GetAtt":["GatewayIp", "AllocationId"]},
        "SubnetId":{"Ref":"PublicSubnet"},
        "Tags":[
          {"Key":"Application", "Value":{"Ref":"AWS::StackName"}},
          {"Key":"Network", "Value":"Public"}
        ]
      }
    },

    "PrivateSubnet":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "AvailabilityZone":{"Ref":"PrivateAvailZone"},
        "CidrBlock":{"Fn::FindInMap":["SubnetConfig", "Private", "CIDR"]},
        "MapPublicIpOnLaunch":"false",
        "Tags":[
          {"Key":"Application", "Value":{"Ref":"AWS::StackName"}},
          {"Key":"Network", "Value":"Private"}
        ]
      }
    },

    "PrivateRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{"Ref":"VPC" },
        "Tags":[
          {"Key":"Application", "Value":{"Ref":"AWS::StackName"}},
          {"Key":"Network", "Value":"Private"}
        ]
      }
    },

    "PrivateRoute":{
      "Type":"AWS::EC2::Route",
      "DependsOn": "GatewayAttach",
      "Properties":{
        "DestinationCidrBlock":"0.0.0.0/0",
        "RouteTableId":{"Ref":"PrivateRouteTable"},
        "NatGatewayId":{"Ref":"NatGateway"}
      }
    },

    "PrivateSubnetRouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{"Ref":"PrivateSubnet"},
        "RouteTableId":{"Ref":"PrivateRouteTable"}
      }
    },

    "PublicSubnet":{
      "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"VPC"},
        "AvailabilityZone":{"Ref":"PublicAvailZone"},
        "CidrBlock":{"Fn::FindInMap":["SubnetConfig", "Public", "CIDR"]},
        "MapPublicIpOnLaunch":"false",
        "Tags":[
          {"Key":"Application", "Value":{"Ref":"AWS::StackName"}},
          {"Key":"Network", "Value":"Public"}
        ]
      }
    },

    "PublicRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{"Ref":"VPC" },
        "Tags":[
          {"Key":"Application", "Value":{"Ref":"AWS::StackName"}},
          {"Key":"Network", "Value":"Public"}
        ]
      }
    },

    "PublicRoute":{
      "Type":"AWS::EC2::Route",
      "DependsOn": "GatewayAttach",
      "Properties":{
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{"Ref":"InternetGateway"},
        "RouteTableId":{"Ref":"PublicRouteTable"}
      }
    },

    "PublicSubnetRouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{"Ref":"PublicSubnet"},
        "RouteTableId":{"Ref":"PublicRouteTable"}
      }
    }
  },

  "Outputs":{
    "VpcId":{
      "Description":"Fresh VPC",
      "Value":{"Ref": "VPC"}
    },

    "PrivateSubnetId":{
      "Description":"Private Subnet",
      "Value":{"Ref":"PrivateSubnet"}
    },

    "PublicSubnetId":{
      "Description":"Public Subnet",
      "Value":{"Ref":"PublicSubnet"}
    },

    "PublicCIDR":{
      "Description":"Public CIDR",
      "Value":{"Fn::FindInMap":["SubnetConfig", "Public", "CIDR"]}
    }
  }
}
